@@ -35,3 +35,5 @@ For exemple: GET query name today -> token, correctily -> refreshToken (like the
 
 *** security -> check if the loginWithCode is the refresh or otp token, because can the bad user try to login with a different token
     * do it for all endpoints, maybe we needs an enum to map all possibilities
+
+** google login we need to update the user too, not only create
